[package]
name = "time-span"
version = "0.1.0"
edition = "2024"
description = "A simple RAII-based time measurement crate"
license = "MIT"
repository = "https://github.com/paulzhang5511/time-span"
keywords = ["time", "measurement", "timer", "performance", "span"]
categories = ["development-tools::profiling", "development-tools::debugging"]
readme = "README.md"
authors = ["Paul Zhang"]

[dependencies]
log = "0.4"
